# wasm-fractal

./: .gitignore  Cargo.toml  README.md  wasm-pack.toml
.github/: dependabot.yml
.github/workflows/: deploy.yml  static.yml
src/: julia.rs  lib.rs  logic.rs  mandelbrot.rs  utils.rs
www/: index.html  index.js  package-lock.json  package.json  tsconfig.json  vite.config.ts  webpack.config.js
www/public/html/: julia.html  mandelbrot.html  privacy.html  terms.html
www/src/: main.tsx
www/src/components/: Layout.tsx
www/src/config/: fractalConfig.ts
www/src/hooks/: useFractalWorkers.ts
www/src/pages/: Home.tsx  Julia.tsx  Mandelbrot.tsx  Privacy.tsx  Terms.tsx
www/src/types/: global.d.ts
www/src/utils/: mathjax.ts
www/src/workers/: fractalWorker.ts  workerPool.ts
