[package]
name = "wasm-fractal"
version = "1.2.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
num-complex = "0.4.2"
wasm-bindgen = "0.2.83"
console_error_panic_hook = "0.1.7"

[dev-dependencies]
image = "0.25.10"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1